feat: use api models in client
