# extension/src/lib/api/models/MediaDetailsRequest.ts
@@ -6,9 +6,7 @@ export type MediaDetailsRequest = {
     title: string;
     channel: string;
     channelUrl: string;
-    videoId: string;
-    url: string;
-    transcription_close_to_timestamp: string;
-    transcription_with_more_context: string;
+    transcription_close_to_timestamp?: (string | null);
+    transcription_with_more_context?: (string | null);
 };
 
